:bug: Alignet alert-ikon med tekst

--- a/@navikt/core/css/alert.css
+++ b/@navikt/core/css/alert.css
@@ -25,6 +25,7 @@
   align-self: flex-start;
   height: var(--a-font-line-height-xlarge);
   margin: var(--a-spacing-1);
+  margin-block-start: -1px;
   background: radial-gradient(circle, var(--a-surface-default) 50%, 0, transparent);
 }
 
